Advanced features in Connection, ResultSets, Statements, PreparedStatements, ResultSetMetaData DatabaseMetaData along with extensive integration tests.