@@ -1,14 +1,21 @@
 package org.openjdbcproxy.jdbc;
 
+import com.google.protobuf.ByteString;
+import com.openjdbcproxy.grpc.CallResourceRequest;
+import com.openjdbcproxy.grpc.CallResourceResponse;
+import com.openjdbcproxy.grpc.CallType;
 import com.openjdbcproxy.grpc.LobReference;
 import com.openjdbcproxy.grpc.LobType;
 import com.openjdbcproxy.grpc.OpResult;
+import com.openjdbcproxy.grpc.ResourceType;
+import com.openjdbcproxy.grpc.TargetCall;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.openjdbcproxy.constants.CommonConstants;
 import org.openjdbcproxy.grpc.client.StatementService;
 import org.openjdbcproxy.grpc.dto.Parameter;
 
-import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -29,15 +36,18 @@ import java.sql.SQLWarning;
 import java.sql.SQLXML;
 import java.sql.Time;
 import java.sql.Timestamp;
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Properties;
 import java.util.SortedMap;
 import java.util.TreeMap;
 
 import static org.openjdbcproxy.grpc.SerializationHandler.deserialize;
+import static org.openjdbcproxy.grpc.SerializationHandler.serialize;
 import static org.openjdbcproxy.grpc.dto.ParameterType.ARRAY;
 import static org.openjdbcproxy.grpc.dto.ParameterType.ASCII_STREAM;
 import static org.openjdbcproxy.grpc.dto.ParameterType.BIG_DECIMAL;
@@ -72,13 +82,25 @@ public class PreparedStatement implements java.sql.PreparedStatement {
     private final Connection connection;
     private String sql;
     private SortedMap<Integer, Parameter> paramsMap;
+    private Map<String, Object> properties;
     private StatementService statementService;
-    private String uuid;//If present represents the UUID of this PreparedStatement in the server
-
+    @Getter
+    private String prepareStatementUUID;//If present represents the UUID of this PreparedStatement in the server
+    private Statement statement;
 
     public PreparedStatement(Connection connection, String sql, StatementService statementService) {
         this.connection = connection;
         this.sql = sql;
+        this.properties = null;
+        this.paramsMap = new TreeMap<>();
+        this.statementService = statementService;
+    }
+
+    public PreparedStatement(Connection connection, String sql, StatementService statementService,
+                             Map<String, Object> properties) {
+        this.connection = connection;
+        this.sql = sql;
+        this.properties = properties;
         this.paramsMap = new TreeMap<>();
         this.statementService = statementService;
     }
@@ -86,7 +108,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
     @Override
     public ResultSet executeQuery() throws SQLException {
         Iterator<OpResult> itOpResult = this.statementService
-                .executeQuery(this.connection.getSession(), this.sql, this.paramsMap.values().stream().toList());
+                .executeQuery(this.connection.getSession(), this.sql, this.paramsMap.values().stream().toList(), this.properties);
         return new ResultSet(itOpResult, this.statementService, this);
     }
 
@@ -94,7 +116,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
     public int executeUpdate() throws SQLException {
         log.info("Executing update for -> {}", this.sql);
         OpResult result = this.statementService.executeUpdate(this.connection.getSession(), this.sql,
-                this.paramsMap.values().stream().toList(), this.uuid);
+                this.paramsMap.values().stream().toList(), this.prepareStatementUUID, null);
         this.connection.setSession(result.getSession());
         return deserialize(result.getValue().toByteArray(), Integer.class);
     }
@@ -114,7 +136,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(BOOLEAN)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -124,7 +146,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(BYTE)
                         .index(parameterIndex)
-                        .values(List.of(new byte[]{x}))//Transform to byte array as it becomes an Object facilitating serialization.
+                        .values(Arrays.asList(new byte[]{x}))//Transform to byte array as it becomes an Object facilitating serialization.
                         .build());
     }
 
@@ -134,7 +156,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(SHORT)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -144,7 +166,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(INT)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -154,7 +176,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(LONG)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -164,7 +186,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(FLOAT)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -174,7 +196,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(DOUBLE)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -184,7 +206,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(BIG_DECIMAL)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -194,7 +216,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(STRING)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -204,7 +226,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(BYTES)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -214,7 +236,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(DATE)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -224,7 +246,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(TIME)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -234,7 +256,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(TIMESTAMP)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -244,7 +266,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(ASCII_STREAM)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -254,7 +276,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(UNICODE_STREAM)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -274,7 +296,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(OBJECT)
                         .index(parameterIndex)
-                        .values(List.of(x, targetSqlType))
+                        .values(Arrays.asList(x, targetSqlType))
                         .build());
     }
 
@@ -284,18 +306,18 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(OBJECT)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
     @Override
     public boolean execute() throws SQLException {
-        return false;
+        return this.callProxy(CallType.CALL_EXECUTE, "", Boolean.class);
     }
 
     @Override
     public void addBatch() throws SQLException {
-
+        this.callProxy(CallType.CALL_ADD, "Batch", Void.class);
     }
 
     @Override
@@ -305,39 +327,42 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(CHARACTER_READER)
                         .index(parameterIndex)
-                        .values(List.of(reader, length))
+                        .values(Arrays.asList(reader, length))
                         .build());
     }
 
     @Override
     public void setRef(int parameterIndex, Ref x) throws SQLException {
+        if (DbInfo.isH2DB()) {
+            throw new SQLException("Not supported.");
+        }
         this.paramsMap.put(parameterIndex,
                 Parameter.builder()
                         .type(REF)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
     @Override
     public void setBlob(int parameterIndex, Blob x) throws SQLException {
-        String blobUUID = ((org.openjdbcproxy.jdbc.Blob) x).getUUID();
+        String blobUUID = (x != null) ? ((org.openjdbcproxy.jdbc.Blob) x).getUUID() : null;
         this.paramsMap.put(parameterIndex,
                 Parameter.builder()
                         .type(BLOB)
                         .index(parameterIndex)
-                        .values(List.of(blobUUID)) //Only send the Id as per the blob has been streamed in advance.
+                        .values(Arrays.asList(blobUUID)) //Only send the Id as per the blob has been streamed in advance.
                         .build());
     }
 
     @Override
     public void setClob(int parameterIndex, Clob x) throws SQLException {
-        String clobUUID = ((org.openjdbcproxy.jdbc.Clob) x).getUUID();
+        String clobUUID = (x != null) ? ((org.openjdbcproxy.jdbc.Clob) x).getUUID() : null;
         this.paramsMap.put(parameterIndex,
                 Parameter.builder()
                         .type(CLOB)
                         .index(parameterIndex)
-                        .values(List.of(clobUUID))
+                        .values(Arrays.asList(clobUUID))
                         .build());
     }
 
@@ -347,13 +372,13 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(ARRAY)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
     @Override
     public ResultSetMetaData getMetaData() throws SQLException {
-        return null;
+        return new org.openjdbcproxy.jdbc.ResultSetMetaData(this, this.statementService);
     }
 
     @Override
@@ -362,7 +387,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(DATE)
                         .index(parameterIndex)
-                        .values(List.of(x, cal))
+                        .values(Arrays.asList(x, cal))
                         .build());
     }
 
@@ -372,7 +397,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(TIME)
                         .index(parameterIndex)
-                        .values(List.of(x, cal))
+                        .values(Arrays.asList(x, cal))
                         .build());
     }
 
@@ -382,7 +407,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(TIMESTAMP)
                         .index(parameterIndex)
-                        .values(List.of(x, cal))
+                        .values(Arrays.asList(x, cal))
                         .build());
     }
 
@@ -392,32 +417,38 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(NULL)
                         .index(parameterIndex)
-                        .values(List.of(sqlType, typeName))
+                        .values(Arrays.asList(sqlType, typeName))
                         .build());
     }
 
     @Override
     public void setURL(int parameterIndex, URL x) throws SQLException {
+        if (DbInfo.isH2DB()) {
+            throw new SQLException("Not supported.");
+        }
         this.paramsMap.put(parameterIndex,
                 Parameter.builder()
                         .type(URL)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
     @Override
     public ParameterMetaData getParameterMetaData() throws SQLException {
-        return null;
+        return new org.openjdbcproxy.jdbc.ParameterMetaData();
     }
 
     @Override
     public void setRowId(int parameterIndex, RowId x) throws SQLException {
+        if (DbInfo.isH2DB()) {
+            throw new SQLException("Not supported.");
+        }
         this.paramsMap.put(parameterIndex,
                 Parameter.builder()
                         .type(ROW_ID)
                         .index(parameterIndex)
-                        .values(List.of(x))
+                        .values(Arrays.asList(x))
                         .build());
     }
 
@@ -427,7 +458,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(N_STRING)
                         .index(parameterIndex)
-                        .values(List.of(value))
+                        .values(Arrays.asList(value))
                         .build());
     }
 
@@ -438,7 +469,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(N_CHARACTER_STREAM)
                         .index(parameterIndex)
-                        .values(List.of(value, length))
+                        .values(Arrays.asList(value, length))
                         .build());
     }
 
@@ -448,7 +479,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(N_CLOB)
                         .index(parameterIndex)
-                        .values(List.of(value))
+                        .values(Arrays.asList(value))
                         .build());
     }
 
@@ -469,7 +500,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                     Parameter.builder()
                             .type(CLOB)
                             .index(parameterIndex)
-                            .values(List.of(clob.getUUID()))
+                            .values(Arrays.asList(clob.getUUID()))
                             .build()
             );
         } catch (IOException e) {
@@ -494,7 +525,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                     Parameter.builder()
                             .type(BLOB)
                             .index(parameterIndex)
-                            .values(List.of(blob.getUUID()))
+                            .values(Arrays.asList(blob.getUUID()))
                             .build()
             );
         } catch (IOException e) {
@@ -509,7 +540,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(N_CLOB)
                         .index(parameterIndex)
-                        .values(List.of(reader, length))
+                        .values(Arrays.asList(reader, length))
                         .build());
     }
 
@@ -519,7 +550,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(SQL_XML)
                         .index(parameterIndex)
-                        .values(List.of(xmlObject))
+                        .values(Arrays.asList(xmlObject))
                         .build());
     }
 
@@ -529,7 +560,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(OBJECT)
                         .index(parameterIndex)
-                        .values(List.of(x, targetSqlType, scaleOrLength))
+                        .values(Arrays.asList(x, targetSqlType, scaleOrLength))
                         .build());
     }
 
@@ -539,7 +570,7 @@ public class PreparedStatement implements java.sql.PreparedStatement {
                 Parameter.builder()
                         .type(ASCII_STREAM)
                         .index(parameterIndex)
-                        .values(List.of(x, length))
+                        .values(Arrays.asList(x, length))
                         .build());
     }
 
@@ -553,9 +584,9 @@ public class PreparedStatement implements java.sql.PreparedStatement {
             metadata.put(CommonConstants.PREPARED_STATEMENT_BINARY_STREAM_INDEX, parameterIndex);
             metadata.put(CommonConstants.PREPARED_STATEMENT_BINARY_STREAM_LENGTH, length);
             metadata.put(CommonConstants.PREPARED_STATEMENT_BINARY_STREAM_SQL, this.sql);
-            metadata.put(CommonConstants.PREPARED_STATEMENT_UUID_BINARY_STREAM, this.uuid);
+            metadata.put(CommonConstants.PREPARED_STATEMENT_UUID_BINARY_STREAM, this.prepareStatementUUID);
             LobReference lobReference = binaryStream.sendBinaryStream(LobType.LT_BINARY_STREAM, is, metadata);
-            this.uuid = lobReference.getUuid();//Lob reference UUID for binary streams is the prepared statement uuid.
+            this.prepareStatementUUID = lobReference.getUuid();//Lob reference UUID for binary streams is the prepared statement uuid.
         } catch (RuntimeException e) {
             throw new SQLException("Unable to write binary stream: " + e.getMessage(), e);
         }
@@ -600,139 +631,141 @@ public class PreparedStatement implements java.sql.PreparedStatement {
 
     }
 
+    // --- Statement interface methods (delegated to this.getStatement()) ---
+
     @Override
     public ResultSet executeQuery(String sql) throws SQLException {
-        return null;
+        return this.getStatement().executeQuery(sql);
     }
 
     @Override
     public int executeUpdate(String sql) throws SQLException {
-        return 0;
+        return this.getStatement().executeUpdate(sql);
     }
 
     @Override
     public void close() throws SQLException {
-
+        this.getStatement().close();
     }
 
     @Override
     public int getMaxFieldSize() throws SQLException {
-        return 0;
+        return this.getStatement().getMaxFieldSize();
     }
 
     @Override
     public void setMaxFieldSize(int max) throws SQLException {
-
+        this.getStatement().setMaxFieldSize(max);
     }
 
     @Override
     public int getMaxRows() throws SQLException {
-        return 0;
+        return this.getStatement().getMaxRows();
     }
 
     @Override
     public void setMaxRows(int max) throws SQLException {
-
+        this.getStatement().setMaxRows(max);
     }
 
     @Override
     public void setEscapeProcessing(boolean enable) throws SQLException {
-
+        this.getStatement().setEscapeProcessing(enable);
     }
 
     @Override
     public int getQueryTimeout() throws SQLException {
-        return 0;
+        return this.getStatement().getQueryTimeout();
     }
 
     @Override
     public void setQueryTimeout(int seconds) throws SQLException {
-
+        this.getStatement().setQueryTimeout(seconds);
     }
 
     @Override
     public void cancel() throws SQLException {
-
+        this.getStatement().cancel();
     }
 
     @Override
     public SQLWarning getWarnings() throws SQLException {
-        return null;
+        return this.getStatement().getWarnings();
     }
 
     @Override
     public void clearWarnings() throws SQLException {
-
+        this.getStatement().clearWarnings();
     }
 
     @Override
     public void setCursorName(String name) throws SQLException {
-
+        this.getStatement().setCursorName(name);
     }
 
     @Override
     public boolean execute(String sql) throws SQLException {
-        return false;
+        return this.getStatement().execute(sql);
     }
 
     @Override
     public ResultSet getResultSet() throws SQLException {
-        return null;
+        return this.getStatement().getResultSet();
     }
 
     @Override
     public int getUpdateCount() throws SQLException {
-        return 0;
+        return this.getStatement().getUpdateCount();
     }
 
     @Override
     public boolean getMoreResults() throws SQLException {
-        return false;
+        return this.getStatement().getMoreResults();
     }
 
     @Override
     public void setFetchDirection(int direction) throws SQLException {
-
+        this.getStatement().setFetchDirection(direction);
     }
 
     @Override
     public int getFetchDirection() throws SQLException {
-        return 0;
+        return this.getStatement().getFetchDirection();
     }
 
     @Override
     public void setFetchSize(int rows) throws SQLException {
-
+        this.getStatement().setFetchSize(rows);
     }
 
     @Override
     public int getFetchSize() throws SQLException {
-        return 0;
+        return this.getStatement().getFetchSize();
     }
 
     @Override
     public int getResultSetConcurrency() throws SQLException {
-        return 0;
+        return this.getStatement().getResultSetConcurrency();
     }
 
     @Override
     public int getResultSetType() throws SQLException {
-        return 0;
+        return this.getStatement().getResultSetType();
     }
 
     @Override
     public void addBatch(String sql) throws SQLException {
-
+        this.getStatement().addBatch(sql);
     }
 
     @Override
     public void clearBatch() throws SQLException {
-
+        this.getStatement().clearBatch();
     }
 
     @Override
     public int[] executeBatch() throws SQLException {
-        return new int[0];
+        return this.getStatement().executeBatch();
     }
 
     @Override
@@ -742,72 +775,72 @@ public class PreparedStatement implements java.sql.PreparedStatement {
 
     @Override
     public boolean getMoreResults(int current) throws SQLException {
-        return false;
+        return this.getStatement().getMoreResults(current);
     }
 
     @Override
-    public ResultSet getGeneratedKeys() throws SQLException {
-        return null;
+    public RemoteProxyResultSet getGeneratedKeys() throws SQLException {
+        return this.getStatement().getGeneratedKeys();
     }
 
     @Override
     public int executeUpdate(String sql, int autoGeneratedKeys) throws SQLException {
-        return 0;
+        return this.getStatement().executeUpdate(sql, autoGeneratedKeys);
     }
 
     @Override
     public int executeUpdate(String sql, int[] columnIndexes) throws SQLException {
-        return 0;
+        return this.getStatement().executeUpdate(sql, columnIndexes);
     }
 
     @Override
     public int executeUpdate(String sql, String[] columnNames) throws SQLException {
-        return 0;
+        return this.getStatement().executeUpdate(sql, columnNames);
     }
 
     @Override
     public boolean execute(String sql, int autoGeneratedKeys) throws SQLException {
-        return false;
+        return this.getStatement().execute(sql, autoGeneratedKeys);
     }
 
     @Override
     public boolean execute(String sql, int[] columnIndexes) throws SQLException {
-        return false;
+        return this.getStatement().execute(sql, columnIndexes);
     }
 
     @Override
     public boolean execute(String sql, String[] columnNames) throws SQLException {
-        return false;
+        return this.getStatement().execute(sql, columnNames);
     }
 
     @Override
     public int getResultSetHoldability() throws SQLException {
-        return 0;
+        return this.getStatement().getResultSetHoldability();
     }
 
     @Override
     public boolean isClosed() throws SQLException {
-        return false;
+        return this.getStatement().isClosed();
     }
 
     @Override
     public void setPoolable(boolean poolable) throws SQLException {
-
+        this.getStatement().setPoolable(poolable);
     }
 
     @Override
     public boolean isPoolable() throws SQLException {
-        return false;
+        return this.getStatement().isPoolable();
     }
 
     @Override
     public void closeOnCompletion() throws SQLException {
-
+        this.getStatement().closeOnCompletion();
     }
 
     @Override
     public boolean isCloseOnCompletion() throws SQLException {
-        return false;
+        return this.getStatement().isCloseOnCompletion();
     }
 
     @Override
@@ -818,5 +851,72 @@ public class PreparedStatement implements java.sql.PreparedStatement {
     @Override
     public boolean isWrapperFor(Class<?> iface) throws SQLException {
         return false;
+    }
+
+    private synchronized Statement getStatement() throws SQLException {
+        if (this.statement == null) {
+            this.propertiesHaveSqlStatement();
+            this.statement = new Statement(this.connection, this.statementService, this.properties,
+                    ResourceType.RES_PREPARED_STATEMENT);
+        }
+        return this.statement;
+    }
+
+    public Map<String, Object> getProperties() {
+        this.propertiesHaveSqlStatement();
+        return this.properties;
+    }
+
+    /**
+     * Guarantees that the properties map has the sql statement set in this prepared statement.
+     */
+    private void propertiesHaveSqlStatement() {
+        String sqlProperty = (this.properties != null &&
+                this.properties.get(CommonConstants.PREPARED_STATEMENT_SQL_KEY) != null) ?
+                this.properties.get(CommonConstants.PREPARED_STATEMENT_SQL_KEY).toString() : null;
+        if (StringUtils.isBlank(sqlProperty) && StringUtils.isNotBlank(this.sql)) {
+            if (this.properties == null) {
+                this.properties = new HashMap<>();
+            }
+            this.properties.put(CommonConstants.PREPARED_STATEMENT_SQL_KEY, this.sql);
+        }
+    }
+
+    private CallResourceRequest.Builder newCallBuilder() {
+        this.propertiesHaveSqlStatement();
+        CallResourceRequest.Builder builder = CallResourceRequest.newBuilder()
+                .setSession(this.connection.getSession())
+                .setResourceType(ResourceType.RES_PREPARED_STATEMENT);
+        if (this.prepareStatementUUID != null) {
+            builder.setResourceUUID(this.prepareStatementUUID);
+        }
+        if (this.properties != null) {
+            builder.setProperties(ByteString.copyFrom(serialize(this.properties)));
+        }
+        return builder;
+    }
+
+    private <T> T callProxy(CallType callType, String targetName, Class<?> returnType) throws SQLException {
+        return this.callProxy(callType, targetName, returnType, Constants.EMPTY_OBJECT_LIST);
+    }
+
+    private <T> T callProxy(CallType callType, String targetName, Class<?> returnType, List<Object> params) throws SQLException {
+        CallResourceRequest.Builder reqBuilder = this.newCallBuilder();
+        reqBuilder.setTarget(
+                TargetCall.newBuilder()
+                        .setCallType(callType)
+                        .setResourceName(targetName)
+                        .setParams(ByteString.copyFrom(serialize(params)))
+                        .build()
+        );
+        CallResourceResponse response = this.statementService.callResource(reqBuilder.build());
+        this.connection.setSession(response.getSession());
+        if (this.prepareStatementUUID == null && !response.getResourceUUID().isBlank()) {
+            this.prepareStatementUUID = response.getResourceUUID();
+        }
+        if (Void.class.equals(returnType)) {
+            return null;
+        }
+        return (T) deserialize(response.getValues().toByteArray(), returnType);
     }
 }
